# hilbertbench

./: .gitignore  .readthedocs.yaml  404.html  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  index.html  mkdocs-rtd.yml  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  tests.yml
analyzers/barren-plateau/: index.html
analyzers/circuit-structure/: index.html
analyzers/expressibility/: index.html
analyzers/noise-profile/: index.html
analyzers/optimization/: index.html
analyzers/shot-noise/: index.html
architecture/001_invariants/: index.html
architecture/002_principles/: index.html
architecture/003_extension_rules/: index.html
architecture/004_versioning/: index.html
concepts/: index.html
demo/: 01_qiskit_estimator.py  02_qiskit_sampler.py  03_qiskit_ibm.py  04_pennylane.py
demo/two_moons/: 12_execution_parity.py  13_barren_plateau_validation.py  14_noise_profile.py
design_decisions/: index.html
design_decisions/0001_trace_atomicity/: index.html
design_decisions/0002_evidence_vs_interpretation/: index.html
docs/: concepts.md  end-to-end.md  getting-started.md  index.md
docs/analyzers/: barren-plateau.md  circuit-structure.md  expressibility.md  noise-profile.md  optimization.md  shot-noise.md
docs/architecture/: 001_invariants.md  002_principles.md  003_extension_rules.md  004_versioning.md
docs/design_decisions/: 0001_trace_atomicity.md  0002_evidence_vs_interpretation.md  README.md
docs/guides/: active-mode.md  ibm-hardware.md  pennylane-qnn.md  qiskit-estimator.md  qiskit-sampler.md
docs/reference/: invariants.md  test-catalog.md  trace-format.md
docs/tutorials/: expressibility-vs-trainability.md  hardware-noise.md  index.md  shot-noise.md  vqe-barren-plateau.md
end-to-end/: index.html
experiments/: README.md  common.py  hw_expr_final.py  hw_frontier.py  hw_onset_final.py  hw_separation_pilot.py  hw_smoke_test.py  recipe_pilot.py  study_a_bp_scaling.py  study_b_shot_noise.py  study_c_expressibility.py  study_d_fidelity.py  study_e_commitment.sha256  study_e_corpus.py  study_e_hardware.py  threshold_sensitivity.py
getting-started/: index.html
guides/active-mode/: index.html
guides/ibm-hardware/: index.html
guides/pennylane-qnn/: index.html
guides/qiskit-estimator/: index.html
guides/qiskit-sampler/: index.html
hilbertbench/: README.md  __init__.py
hilbertbench/active/: __init__.py  probe.py
hilbertbench/analysis/: __init__.py  _util.py  circuit.py  expressibility.py  measurement.py  noise.py  optimization.py  trainability.py
hilbertbench/analyzer/: expressibility.py  measurement.py  trainability.py
hilbertbench/integrations/: pennylane.py  qiskit.py
hilbertbench/models/: README.md  __init__.py
hilbertbench/reader/: verify.py
hilbertbench/recorder/: __init__.py  tape.py
hilbertbench/trace/: __init__.py  span.py  trace.py
javascripts/: mathjax.js
overrides/: home.html
reference/invariants/: index.html
reference/test-catalog/: index.html
reference/trace-format/: index.html
schemas/: README.md
schemas/scripts/: generate_models.py  generate_python_models.sh
schemas/v1.0/: artifact.json  catalog.json  span.json  trace.json
search/: search_index.json
tests/: README.md
tests/active/: test_active_mode.py
tests/analysis/: test_builtin_analyzers.py  test_confidence.py  test_noise.py  test_optimization_and_circuit.py
tests/analyzer/: test_analyzers.py
tests/compliance/: test_backward_compatibility.py  test_execution_parity.py  test_invariants.py  test_schema_roundtrip.py
tests/e2e/: test_full_algorithms.py  test_phenomenology.py  test_qiskit_aer.py
tests/integrations/: test_pennylane.py  test_pennylane_measurements.py  test_pennylane_qasm_reproducibility.py  test_qiskit.py  test_qiskit_calibration.py  test_qiskit_sampler.py
tests/reader/: test_verify.py
tests/recorder/: test_inline_artifacts.py  test_invariants.py  test_storage.py  test_tape.py
tests/tools/: test_blind_corpus.py
tests/trace/: test_hilberttrace.py
tools/: blind_corpus.py  gen_test_catalog.py  md2docx.py
tutorials/: index.html
tutorials/expressibility-vs-trainability/: index.html
tutorials/hardware-noise/: index.html
tutorials/shot-noise/: index.html
(+7 files in other folders)
